--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "cb117675",
    "metadata": {},
    "outputs": [
@@ -1632,19 +1632,56 @@
        "4              N      0.0       Up             0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "heart = pd.read_csv(\"heart.csv\")\n",
     "heart.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
+   "id": "8d5d6a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 918 entries, 0 to 917\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Age             918 non-null    int64  \n",
+      " 1   Sex             918 non-null    object \n",
+      " 2   ChestPainType   918 non-null    object \n",
+      " 3   RestingBP       918 non-null    int64  \n",
+      " 4   Cholesterol     918 non-null    int64  \n",
+      " 5   FastingBS       918 non-null    int64  \n",
+      " 6   RestingECG      918 non-null    object \n",
+      " 7   MaxHR           918 non-null    int64  \n",
+      " 8   ExerciseAngina  918 non-null    object \n",
+      " 9   Oldpeak         918 non-null    float64\n",
+      " 10  ST_Slope        918 non-null    object \n",
+      " 11  HeartDisease    918 non-null    int64  \n",
+      "dtypes: float64(1), int64(6), object(5)\n",
+      "memory usage: 86.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "heart.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e11f8995",
    "metadata": {},
    "outputs": [
@@ -1654,13 +1691,307 @@
        "(918, 12)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "heart.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e9447a",
+   "metadata": {},
+   "source": [
+    "With isolation forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7c356656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "df = pd.read_csv('heart.csv')\n",
+    "for col in df.select_dtypes(include='object').columns:\n",
+    "    le = LabelEncoder()\n",
+    "    df[col] = le.fit_transform(df[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "41c10094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso = IsolationForest(contamination=0.05,random_state=42)\n",
+    "df['anomaly'] = iso.fit_predict(df.drop('HeartDisease',axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3c3615dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "outliers = df[df['anomaly']==-1]\n",
+    "inliers = df[df['anomaly']==1]\n",
+    "print(len(outliers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "805bc357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['anomaly']==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aa488c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ChestPainType</th>\n",
+       "      <th>RestingBP</th>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th>FastingBS</th>\n",
+       "      <th>RestingECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExerciseAngina</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>ST_Slope</th>\n",
+       "      <th>HeartDisease</th>\n",
+       "      <th>anomaly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>140</td>\n",
+       "      <td>289</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>283</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>138</td>\n",
+       "      <td>214</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Sex  ChestPainType  RestingBP  Cholesterol  FastingBS  RestingECG  \\\n",
+       "0   40    1              1        140          289          0           1   \n",
+       "1   49    0              2        160          180          0           1   \n",
+       "2   37    1              1        130          283          0           2   \n",
+       "3   48    0              0        138          214          0           1   \n",
+       "4   54    1              2        150          195          0           1   \n",
+       "\n",
+       "   MaxHR  ExerciseAngina  Oldpeak  ST_Slope  HeartDisease  anomaly  \n",
+       "0    172               0      0.0         2             0        1  \n",
+       "1    156               0      1.0         1             1        1  \n",
+       "2     98               0      0.0         2             0        1  \n",
+       "3    108               1      1.5         1             1        1  \n",
+       "4    122               0      0.0         2             0        1  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5049a081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('HeartDisease',axis=1)\n",
+    "y = df['HeartDisease']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c52cbcfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "88d807db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(0.95)\n",
+    "X_pca = pca.fit_transform(X_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1171ef64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "47d16330",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8914285714285715"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_train, y_train)\n",
+    "rf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba84fc2",
+   "metadata": {},
+   "source": [
+    "With formula"
    ]
   },
   {
